Added admin dashboard

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,8 +6,8 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <h2>CLURIX</h2>
-        <img src="/images/logo.svg" width="160" height="50" alt="Clurix Grill - Home">
+        <h2>CLURIX GRILL</h2>
+        <!-- <img src="/images/logo.svg" width="160" height="50" alt="Clurix Grill - Home"> -->
       </a>
 
       <nav class="navbar" data-navbar>
