--- a/views/partials/preloader.ejs
+++ b/views/partials/preloader.ejs
@@ -4,5 +4,5 @@
 
   <div class="preload" data-preaload>
     <div class="circle"></div>
-    <p class="text">Clurix Grilli</p>
+    <p class="text">Clurix Grill</p>
   </div>
