--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -13,7 +13,7 @@
                 </li>
             </ul>
         </div>
-        <a href="#" class="btn-download">
+        <a href="/addnew" class="btn-download">
             <i class='bx' ></i>
             <span class="text">Add New &neArr;</span>
         </a>
