--- a/views/partials/sidebar_admin.ejs
+++ b/views/partials/sidebar_admin.ejs
@@ -31,7 +31,7 @@
         </li>
         <li>
             <a href="/addnew">
-                <i class='bx bxs-group' ></i>
+                <i class='bx' >+</i>
                 <span class="text">Add New</span>
             </a>
         </li>
