--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -60,46 +60,16 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <% categories.forEach(cat => { %>
+                    <tr>   
                         <td>
-                            <img src="images/image.png">
-                            <p>Breakfast</p>
+                            <img src="<%= cat.image %>">
+                            <p><%= cat.name %></p>
                         </td>
                         <td>0</td>
-                        <td><a href="">Edit</a></td>
+                        <td><a href="">Edit &neArr;</a></td>
                     </tr>
-                    <tr>
-                        <td>
-                            <img src="images/image.png">
-                            <p>Lunch</p>
-                        </td>
-                        <td>0</td>
-                        <td><a href="">Edit</a></td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <img src="images/image.png">
-                            <p>Dinner</p>
-                        </td>
-                        <td>0</td>
-                        <td><a href="">Edit</a></td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <img src="images/image.png">
-                            <p>Drinks</p>
-                        </td>
-                        <td>0</td>
-                        <td><a href="">Edit</a></td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <img src="images/image.png">
-                            <p>Desert</p>
-                        </td>
-                        <td>0</td>
-                        <td><a href="">Edit</a></td>
-                    </tr>
+                    <% }) %>
                 </tbody>
             </table>
         </div>
