--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,6 +31,14 @@
           </li>
 
           <li class="navbar-item">
+            <a href="categories" class="navbar-link hover-underline">
+              <div class="separator"></div>
+
+              <span class="span">Categories</span>
+            </a>
+          </li>
+
+          <li class="navbar-item">
             <a href="#menu" class="navbar-link hover-underline">
               <div class="separator"></div>
 
@@ -46,13 +54,6 @@
             </a>
           </li>
 
-          <li class="navbar-item">
-            <a href="#" class="navbar-link hover-underline">
-              <div class="separator"></div>
-
-              <span class="span">Our Chefs</span>
-            </a>
-          </li>
 
           <li class="navbar-item">
             <a href="#" class="navbar-link hover-underline">
