almost done with the project

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
               Come with family & feel the joy of mouthwatering food
             </p>
 
-            <a href="#" class="btn btn-primary slider-reveal">
+            <a href="/menus" class="btn btn-primary slider-reveal">
               <span class="text text-1">View Our Menu</span>
 
               <span class="text text-2" aria-hidden="true">View Our Menu</span>
@@ -51,7 +51,7 @@
               Come with family & feel the joy of mouthwatering food
             </p>
 
-            <a href="#" class="btn btn-primary slider-reveal">
+            <a href="/menus" class="btn btn-primary slider-reveal">
               <span class="text text-1">View Our Menu</span>
 
               <span class="text text-2" aria-hidden="true">View Our Menu</span>
@@ -76,7 +76,7 @@
               Come with family & feel the joy of mouthwatering food
             </p>
 
-            <a href="#" class="btn btn-primary slider-reveal">
+            <a href="/menus" class="btn btn-primary slider-reveal">
               <span class="text text-1">View Our Menu</span>
 
               <span class="text text-2" aria-hidden="true">View Our Menu</span>
@@ -94,7 +94,7 @@
           <ion-icon name="chevron-forward"></ion-icon>
         </button>
 
-        <a href="#" class="hero-btn has-after">
+        <a href="/reservation" class="hero-btn has-after">
           <img src="/images/hero-icon.png" width="48" height="48" alt="booking icon">
 
           <span class="label-2 text-center span">Book A Table</span>
@@ -189,10 +189,10 @@
 
             <a href="tel:+234 7014697204" class="body-1 contact-number hover-underline">+234 701-469-7204</a>
 
-            <a href="#" class="btn btn-primary">
-              <span class="text text-1">Read More</span>
+            <a href="/categories" class="btn btn-primary">
+              <span class="text text-1">View categories</span>
 
-              <span class="text text-2" aria-hidden="true">Read More</span>
+              <span class="text text-2" aria-hidden="true">View categories</span>
             </a>
 
           </div>
@@ -253,10 +253,10 @@
               <span class="span body-1">$20.00</span>
             </div>
 
-            <a href="#" class="btn btn-primary">
-              <span class="text text-1">View All Menu</span>
+            <a href="/reservation" class="btn btn-primary">
+              <span class="text text-1">Book A Table</span>
 
-              <span class="text text-2" aria-hidden="true">View All Menu</span>
+              <span class="text text-2" aria-hidden="true">Book A Table</span>
             </a>
 
           </div>
@@ -457,7 +457,7 @@
             During winter daily from <span class="span">7:00 pm</span> to <span class="span">9:00 pm</span>
           </p>
 
-          <a href="#" class="btn btn-primary">
+          <a href="/menus" class="btn btn-primary">
             <span class="text text-1">View All Menu</span>
 
             <span class="text text-2" aria-hidden="true">View All Menu</span>
@@ -799,7 +799,7 @@
 
           </ul>
 
-          <a href="#" class="btn btn-primary">
+          <a href="/blogs" class="btn btn-primary">
             <span class="text text-1">View Our Blog</span>
 
             <span class="text text-2" aria-hidden="true">View Our Blog</span>
@@ -807,6 +807,7 @@
 
         </div>
       </section>
+
 
     </article>
   </main>
